<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AFCAA6"
    android:foregroundTint="#7C2727"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/header"
        android:layout_width="412dp"
        android:layout_height="73dp"
        android:background="#fff"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/footer"
        android:layout_width="412dp"
        android:layout_height="73dp"
        android:background="#fff"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtViewHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif"
        android:text="@string/home"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/imgBtnRetornar"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#fff"
        android:contentDescription="@string/voltar"
        android:minHeight="48dp"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="@+id/footer"
        app:layout_constraintEnd_toStartOf="@+id/txtViewHome"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.294"
        app:srcCompat="@drawable/ic_baseline_keyboard_return_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imgBtnPerfil"
        android:layout_width="55dp"
        android:layout_height="44dp"
        android:backgroundTint="#fff"
        android:contentDescription="@string/btnperfil"
        app:layout_constraintBottom_toBottomOf="@+id/footer"
        app:layout_constraintEnd_toStartOf="@+id/imgBtnLogout"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toEndOf="@+id/txtViewHome"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.586"
        app:srcCompat="@drawable/ic_baseline_person_24"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imgBtnLogout"
        android:layout_width="54dp"
        android:layout_height="49dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#fff"
        android:contentDescription="@string/btnlogout"
        app:layout_constraintBottom_toBottomOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="@+id/footer"
        app:layout_constraintTop_toTopOf="@+id/footer"
        app:layout_constraintVertical_bias="0.541"
        app:srcCompat="@drawable/ic_baseline_login_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/txtViewTitulo"
        android:layout_width="341dp"
        android:layout_height="85dp"
        android:backgroundTint="#fff"
        android:gravity="center_horizontal"
        android:text="@string/noticias_baseadas_nas_suas_prefer_ncias"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#fff"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/footer"
        app:layout_constraintVertical_bias="0.07"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/imgBtnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#fff"
        android:contentDescription="@string/btnhome"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgBtnSearch"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/header"
        app:srcCompat="@drawable/ic_baseline_keyboard_arrow_up_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imgBtnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:backgroundTint="#fff"
        android:contentDescription="@string/imgbtnsearch"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgBtnLocal"
        app:layout_constraintTop_toTopOf="@+id/header"
        app:layout_constraintVertical_bias="0.533"
        app:srcCompat="@drawable/ic_baseline_newspaper_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imgBtnLocal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:backgroundTint="#fff"
        android:contentDescription="@string/btnlocal"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgBtnconf"
        app:layout_constraintTop_toTopOf="@+id/header"
        app:layout_constraintVertical_bias="0.533"
        app:srcCompat="@drawable/ic_baseline_near_me_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imgBtnconf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:backgroundTint="#fff"
        android:contentDescription="@string/btnconf"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/header"
        app:layout_constraintEnd_toEndOf="@+id/header"
        app:layout_constraintTop_toTopOf="@+id/header"
        app:layout_constraintVertical_bias="0.533"
        app:srcCompat="@drawable/ic_baseline_display_settings_24"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>